fix spacing

--- a/src/styles/components/_contentelements.scss
+++ b/src/styles/components/_contentelements.scss
@@ -22,7 +22,7 @@
     background-color: $bg-light;
     background-color: var(--bg-light);
     color: var(--text-color);
-    line-height: 1.5;
+    line-height: 1.1;
     text-align: left;
 	border: solid 1px $border-basic;
     border-color: var(--border-basic);
