--- a/src/styles/components/_typography.scss
+++ b/src/styles/components/_typography.scss
@@ -2,7 +2,7 @@
    Base
    ========================================================================== */
 html {
-	font-size: 26px;
+	font-size: 24px;
 }
 
 /* ==========================================================================
